#9 - md to adoc

--- a/src/site/asciidoc/index.adoc
+++ b/src/site/asciidoc/index.adoc
@@ -1,7 +1,6 @@
+= Test suite: ets-wfs30
 
-# Test suite: ets-wfs30
-
-## Scope
+== Scope
 
 This executable test suite (ETS) verifies the conformance of the implementation 
 under test (IUT) with respect to the set of relevant specifications depicted in 
@@ -9,9 +8,9 @@ Figure 1. Conformance testing is a kind of "black box" testing that examines the
 externally visible characteristics or behaviors of the IUT while disregarding 
 any implementation details.
 
-**Figure 1: Relevant specifications**
+*Figure 1: Relevant specifications*
 
-![Set of relevant specifications](img/specifications.png)
+image::img/specifications.png[]
 
 Several conformance classes are defined in the principal specifications; the ones 
 listed below are covered by this test suite:
@@ -22,7 +21,7 @@ listed below are covered by this test suite:
     - List capabilities of conformance class B
 
 
-## Test requirements
+== Test requirements
 
 The documents listed below stipulate requirements that must be satisfied by a 
 conforming implementation.
@@ -38,67 +37,52 @@ suite will be marked as skipped.
 1. Precondition 1;
 2. Precondition 2.
 
-
-## Test suite structure
+== Test suite structure
 
 The test suite definition file (testng.xml) is located in the root package, 
 `org.opengis.cite.wfs30`. A conformance class corresponds to a &lt;test&gt; element, each 
 of which includes a set of test classes that contain the actual test methods. 
 The general structure of the test suite is shown in Table 1.
 
-<table>
-  <caption>Table 1 - Test suite structure</caption>
-  <thead>
-    <tr style="text-align: left; background-color: LightCyan">
-      <th>Conformance class</th>
-      <th>Test classes</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Conformance Level 1</td>
-      <td>org.opengis.cite.wfs30.level1.*</td>
-    </tr>
-    <tr>
-      <td>Conformance Level 2</td>
-      <td>org.opengis.cite.wfs30.level2.*</td>
-    </tr>
-  </tbody>
-</table>
+.Table 1 - Test suite structure
+[cols=2*,options=header]
+|===
+|Conformance class
+|Test classes
+
+|Conformance Level 1
+|org.opengis.cite.wfs30.level1.*
+
+|Conformance Level 2
+|org.opengis.cite.wfs30.level2.*
+
+|===
 
 The Javadoc documentation provides more detailed information about the test 
 methods that constitute the suite.
 
 
-## Test run arguments
+== Test run arguments
 
 The test run arguments are summarized in Table 2. The _Obligation_ descriptor can 
 have the following values: M (mandatory), O (optional), or C (conditional).
 
-<table>
-	<caption>Table 2 - Test run arguments</caption>
-	<thead>
-    <tr>
-      <th>Name</th>
-      <th>Value domain</th>
-	    <th>Obligation</th>
-	    <th>Description</th>
-    </tr>
-  </thead>
-	<tbody>
-    <tr>
-      <td>iut</td>
-      <td>URI</td>
-      <td>M</td>
-      <td>A URI that refers to the implementation under test or metadata about it.
-    Ampersand ('&amp;') characters must be percent-encoded as '%26'.</td>
-    </tr>
-	  <tr>
-      <td>ics</td>
-      <td>A comma-separated list of string values.</td>
-      <td>O</td>
-      <td>An implementation conformance statement that indicates which conformance 
-      classes or options are supported.</td>
-    </tr>
-	</tbody>
-</table>
+.Table 2 - Test run arguments
+[cols=4*,options=header]
+|===
+|Name
+|Value domain
+|Obligation
+|Description
+
+|iut
+|URI
+|M
+|A URI that refers to the implementation under test or metadata about it. Ampersand ('&amp;') characters must be percent-encoded as '%26'.
+
+|ics
+|A comma-separated list of string values.
+|O
+|An implementation conformance statement that indicates which conformance classes or options are supported.
+
+|===
