--- a/README.adoc
+++ b/README.adoc
@@ -1,65 +1,19 @@
-== WFS 3.0 Conformance Test Suite
+= WFS 3.0 Conformance Test Suite
 
-=== Scope
+== Scope
 
 Describe scope of the test suite.
 
 Visit the http://opengeospatial.github.io/ets-wfs30/[project documentation website]
 for more information, including the API documentation.
 
-=== How to run the tests
+== How to build the test suite
 
-The test suite is built using https://maven.apache.org/[Apache Maven v3]. The options
-for running the suite are summarized below.
+The test suite is built using https://maven.apache.org/[Apache Maven v3].
 
-As entry point the Landing Page of the WFS 3.0 is expected.
+include::src/site/asciidoc/how-to-run-the-tests.adoc[]
 
-==== 1. Integrated development environment (IDE)
-
-Use a Java IDE such as Eclipse, NetBeans, or IntelliJ. Clone the repository and build the project.
-
-Set the main class to run: `org.opengis.cite.wfs30.TestNGController`
-
-Arguments: The first argument must refer to an XML properties file containing the
-required test run arguments. If not specified, the default location at `$
-{user.home}/test-run-props.xml` will be used.
-
-You can modify the sample file in `src/main/config/test-run-props.xml`
-
-[source,xml]
-----
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE properties SYSTEM "http://java.sun.com/dtd/properties.dtd">
-<properties version="1.0">
-  <comment>Test run arguments</comment>
-  <entry key="iut">https://www.ldproxy.nrw.de/rest/services/kataster/</entry>
-</properties>
-----
-
-The TestNG results file (`testng-results.xml`) will be written to a subdirectory
-in `${user.home}/testng/` having a UUID value as its name.
-
-==== 2. Command shell (console)
-
-One of the build artifacts is an "all-in-one" JAR file that includes the test
-suite and all of its dependencies; this makes it very easy to execute the test
-suite in a command shell:
-
-`java -jar ets-wfs30-${version}-aio.jar [-o|--outputDir $TMPDIR] [test-run-props.xml]`
-
-==== 3. Docker
-
-This test suite comes with a Dockerfile which can be used to easily setup the OGC test harness with
-the test suite. Details can be found on https://github.com/opengeospatial/cite/wiki/How-to-create-Docker-Images-of-test-suites#create-docker-image-and-create-and-start-docker-container[Create Docker Image and create and start Docker Container].
-
-==== 4. OGC test harness
-
-Use https://github.com/opengeospatial/teamengine[TEAM Engine], the official OGC test harness.
-The latest test suite release are usually available at the http://cite.opengeospatial.org/te2/[beta testing facility].
-You can also https://github.com/opengeospatial/teamengine[build and deploy] the test
-harness yourself and use a local installation.
-
-=== How to contribute
+== How to contribute
 
 If you would like to get involved, you can:
 
