#49 - updated changelog for 0.2

--- a/src/site/asciidoc/changelog.adoc
+++ b/src/site/asciidoc/changelog.adoc
@@ -1,5 +1,17 @@
 = Release Notes WFS 3.0
 
+== 0.2 (2018-12-21)
+
+- https://github.com/opengeospatial/ets-wfs30/issues/46[#46]: Clean Up ETS
+- https://github.com/opengeospatial/ets-wfs30/issues/9[#9]: Create documentation of test suite
+- https://github.com/opengeospatial/ets-wfs30/issues/43[#43]: Exhaustive paging tests unecessary slow/too many requests performed
+- https://github.com/opengeospatial/ets-wfs30/issues/38[#38]: Improve execution order of tests
+- https://github.com/opengeospatial/ets-wfs30/issues/31[#31]: Improve message of failing test LandingTest.landingPageValidation()
+- https://github.com/opengeospatial/ets-wfs30/issues/36[#36]: Test validateCollectionsMetadataDocument_Links fails
+- https://github.com/opengeospatial/ets-wfs30/issues/30[#30]: Remove test FeatureCollectionsMetadataOperation.validateFeatureCollectionsMetadataOperationResponse_Collections()
+- https://github.com/opengeospatial/ets-wfs30/issues/28[#28]: Enhance ETS to run against server implementing the compact API flavor
+- https://github.com/opengeospatial/ets-wfs30/issues/34[#34]: Update README.md regarding test execution (especially IDE mode)
+
 == 0.1 (2018-07-12)
 - https://github.com/opengeospatial/ets-wfs30/issues/17[#17]: Implement A.4.4. Processing the OpenAPI Document - Part 4
 - https://github.com/opengeospatial/ets-wfs30/issues/8[#8]: Implement A.4.4. Processing the OpenAPI Document - Part 3
