--- a/src/site/asciidoc/changelog.adoc
+++ b/src/site/asciidoc/changelog.adoc
@@ -1,5 +1,11 @@
 = Release Notes WFS 3.0
 
+== 0.3 (2019-04-26)
+
+- https://github.com/opengeospatial/ets-wfs30/issues/56[#56]: Test for extent should manage both integer and float
+- https://github.com/opengeospatial/ets-wfs30/issues/54[#54]: Manage getFeatureUrlWithFeatureId when no query string
+- https://github.com/opengeospatial/ets-wfs30/issues/51[#51]: Improve Docker configuration and enable push to Docker Hub
+
 == 0.2 (2018-12-21)
 
 - https://github.com/opengeospatial/ets-wfs30/issues/46[#46]: Clean Up ETS
