--- a/src/site/asciidoc/how-to-run-the-tests.adoc
+++ b/src/site/asciidoc/how-to-run-the-tests.adoc
@@ -2,7 +2,7 @@
 
 The options for running the test suite are summarized below.
 
-As entry point the Landing Page of the WFS 3.0 is expected.
+As entry point the API landing page of an OGC API - Features instance is expected.
 
 === 1. Integrated development environment (IDE)
 
@@ -58,17 +58,17 @@ Create a new session from the list
 
 image::img/test-session-ogccite-03.png[]
 
-Choose 'OGC' organization then Specification 'OGC API Features - 1.0 [ 0.4 ]'
+Choose 'OGC' organization then Specification 'OGC API Features - 1.0'
 
 image::img/complete-test-session-ogccite-04.png[]
 
 Choose the endpoint URL to test if you query all the endpoints (it could take too long depending of the available datasets for the endpoint)
 
-image::img/wfs-conformance-test-suite-ogccite-05.png[]
+image::img/ogc-api-features-conformance-test-suite-ogccite-05.png[]
 
 Wait test execution and see the results from the validator
 
-image::img/result-wfs-test-suite-ogccite-06.png[]
+image::img/result-ogc-api-features-test-suite-ogccite-06.png[]
 
 HTTP calls to localhost are not working with Docker. You need to make calls using host IP (`ipconfig` on Windows or `ifconfig` on Unix based OS like Linux or Mac)
 
