--- a/src/site/asciidoc/index.adoc
+++ b/src/site/asciidoc/index.adoc
@@ -2,7 +2,7 @@
 
 == Scope
 
-This executable test suite (ETS) verifies that a OGC API - Features instance conforms to http://docs.opengeospatial.org/is/17-069r3/17-069r3.html[OGC API - Features - Part 1: Core] (OGC 17-069r3) and related standards. Conformance testing is a kind of "black box" testing that examines externally visible characteristics or behaviors of the SUT and is independent of any implementation details.
+This executable test suite (ETS) verifies that an OGC API - Features instance conforms to http://docs.opengeospatial.org/is/17-069r3/17-069r3.html[OGC API - Features - Part 1: Core] (OGC 17-069r3) and related standards. Conformance testing is a kind of "black box" testing that examines externally visible characteristics or behaviors of the SUT and is independent of any implementation details.
 
 Several conformance classes are defined in the principal specifications. The ones
 listed below are covered by this test suite:
