Update ids and strings related to spec name (#79)

--- a/src/site/asciidoc/how-to-run-the-tests.adoc
+++ b/src/site/asciidoc/how-to-run-the-tests.adoc
@@ -58,7 +58,7 @@ Create a new session from the list
 
 image::img/test-session-ogccite-03.png[]
 
-Choose 'OGC' organization then Specification 'OGC API Features - 1.0'
+Choose 'OGC' organization then Specification 'OGC API - Features - 1.0'
 
 image::img/complete-test-session-ogccite-04.png[]
 
