--- a/src/site/asciidoc/index.adoc
+++ b/src/site/asciidoc/index.adoc
@@ -2,13 +2,22 @@
 
 == Scope
 
-This executable test suite (ETS) verifies that an OGC API - Features instance conforms to http://docs.opengeospatial.org/is/17-069r3/17-069r3.html[OGC API - Features - Part 1: Core] (OGC 17-069r3) and related standards. Conformance testing is a kind of "black box" testing that examines externally visible characteristics or behaviors of the SUT and is independent of any implementation details.
+This executable test suite (ETS) verifies that an OGC API - Features instance conforms to following and related standards.
+
+* http://docs.opengeospatial.org/is/17-069r3/17-069r3.html[OGC API - Features - Part 1: Core] (OGC 17-069r3)
+* http://docs.opengeospatial.org/DRAFTS/20-002.html[OGC API - Features - Part 4: Simple Transactions]
+
+Conformance testing is a kind of "black box" testing that examines externally visible characteristics or behaviors of the SUT and is independent of any implementation details.
 
 Several conformance classes are defined in the principal specifications. The ones
 listed below are covered by this test suite:
 
 * Core
-    - The Core specifies requirements that all OGC API - Features instances have to fulfill.
+    - The Core conformance class specifies requirements that all OGC API - Features instances have to fulfill.
+    - Originates from http://docs.opengeospatial.org/is/17-069r3/17-069r3.html[OGC API - Features - Part 1: Core] (OGC 17-069r3).
+* Simple Transactions
+    - The Simple Transactions conformance class is optional and just partially implemented.
+    - Originates from http://docs.opengeospatial.org/DRAFTS/20-002.html[OGC API - Features - Part 4: Simple Transactions].
 
 == Test requirements
 
@@ -22,8 +31,8 @@ There are some requirements the test suite expects to be satisfied by the servic
 * The API landing page response must be available in JSON.
 * The API definition response must be available in OpenAPI 3.0.
 * The conformance classes response must be available in JSON.
-* The feature collections metadata response and feature collection metadata responses must be available in JSON.
-* Feature collections and features must be available in GeoJSON.
+* The feature collections metadata and feature collection metadata responses must be available in JSON.
+* The feature collections and features must be available in GeoJSON.
 
 == Test suite structure
 
@@ -44,6 +53,10 @@ The general structure of the test suite is shown in Table 1.
  * org.opengis.cite.ogcapifeatures10.apidescription.*
  * org.opengis.cite.ogcapifeatures10.conformance.*
  * org.opengis.cite.ogcapifeatures10.collections.*
+
+|Simple Transactions
+|
+ * org.opengis.cite.ogcapifeatures10.simpletransactions.*
 
 |===
 
