Updated documentation and refactored the code.

--- a/src/site/asciidoc/how-to-run-the-tests.adoc
+++ b/src/site/asciidoc/how-to-run-the-tests.adoc
@@ -35,7 +35,7 @@ One of the build artifacts is an "all-in-one" JAR file that includes the test
 suite and all of its dependencies; this makes it very easy to execute the test
 suite in a command shell:
 
-`java -jar ets-ogcapi-features10-${version}-aio.jar [-o|--outputDir $TMPDIR] [test-run-props.xml]`
+`java -jar ets-ogcapi-features10-${version}-aio.jar [-o|--outputDir $TMPDIR] [-h|--generateHtmlReport] [test-run-props.xml]`
 
 === 3. Docker
 
