--- a/src/site/asciidoc/index.adoc
+++ b/src/site/asciidoc/index.adoc
@@ -2,13 +2,15 @@
 
 == Scope
 
-This executable test suite (ETS) verifies that an OGC API - Features instance conforms to http://docs.opengeospatial.org/is/17-069r3/17-069r3.html[OGC API - Features - Part 1: Core] (OGC 17-069r3) and related standards. Conformance testing is a kind of "black box" testing that examines externally visible characteristics or behaviors of the SUT and is independent of any implementation details.
+This executable test suite (ETS) verifies that an OGC API - Features instance conforms to http://docs.opengeospatial.org/is/17-069r3/17-069r3.html[OGC API - Features - Part 1: Core] (OGC 17-069r3), http://docs.opengeospatial.org/is/18-058/18-058.html[OGC API - Features - Part 2: Coordinate Reference Systems by Reference] (OGC 18-058) and related standards. Conformance testing is a kind of "black box" testing that examines externally visible characteristics or behaviors of the SUT and is independent of any implementation details.
 
 Several conformance classes are defined in the principal specifications. The ones
 listed below are covered by this test suite:
 
 * Core
     - The Core specifies requirements that all OGC API - Features instances have to fulfill.
+* CRS - Part 2
+    - Optional conformance class to fulfill requirements of OGC API - Features - Part 2: Coordinate Reference Systems by Reference specification.
 
 == Test requirements
 
@@ -45,6 +47,8 @@ The general structure of the test suite is shown in Table 1.
  * org.opengis.cite.ogcapifeatures10.conformance.core.apidescription.*
  * org.opengis.cite.ogcapifeatures10.conformance.core.conformance.*
  * org.opengis.cite.ogcapifeatures10.conformance.core.collections.*
+ * org.opengis.cite.ogcapifeatures10.conformance.crs.discovery.*
+ * org.opengis.cite.ogcapifeatures10.conformance.crs.query.*
 
 |===
 
