#155 Add CRS specific test requirement to documentation

--- a/src/site/asciidoc/index.adoc
+++ b/src/site/asciidoc/index.adoc
@@ -10,7 +10,7 @@ listed below are covered by this test suite:
 * Core
     - The Core specifies requirements that all OGC API - Features instances have to fulfill.
 * CRS - Part 2
-    - Optional conformance class to fulfill requirements of OGC API - Features - Part 2: Coordinate Reference Systems by Reference specification.
+    - Optional conformance class to fulfill requirements of http://docs.opengeospatial.org/is/18-058/18-058.html[OGC API - Features - Part 2: Coordinate Reference Systems by Reference] specification.
 
 == Test requirements
 
@@ -21,11 +21,15 @@ conforming implementation.
 
 There are some requirements the test suite expects to be satisfied by the service under test:
 
-* The API landing page response must be available in JSON.
-* The API definition response must be available in OpenAPI 3.0.
-* The conformance classes response must be available in JSON.
-* The feature collections metadata response and feature collection metadata responses must be available in JSON.
-* Feature collections and features must be available in GeoJSON.
+* General:
+    - The API landing page response must be available in JSON.
+    - The API definition response must be available in OpenAPI 3.0.
+    - The conformance classes response must be available in JSON.
+    - The feature collections metadata response and feature collection metadata responses must be available in JSON.
+    - Feature collections and features must be available in GeoJSON.
+
+* CRS - Part 2:
+    - CRS definitions must start with `urn:ogc:def:crs:EPSG` or `http://www.opengis.net/def/crs/EPSG`.
 
 == Test suite structure
 
