--- a/src/site/asciidoc/changelog.adoc
+++ b/src/site/asciidoc/changelog.adoc
@@ -1,5 +1,16 @@
 = Release Notes OGC API - Features
 
+== 1.3 (2021-07-30)
+
+- https://github.com/opengeospatial/ets-ogcapi-features10/issues/127[#127]: Add support for OGC API - Features - Part 2: Coordinate Reference Systems by Reference
+- https://github.com/opengeospatial/ets-ogcapi-features10/issues/140[#140]: Implement test for Abstract Test 2 /ats/core/crs84
+- https://github.com/opengeospatial/ets-ogcapi-features10/issues/173[#173]: Implement test for Abstract Test 10, Test Method 3
+- https://github.com/opengeospatial/ets-ogcapi-features10/issues/158[#158]: Spatial extent is not parsed correctly or implementation is incomplete
+- https://github.com/opengeospatial/ets-ogcapi-features10/issues/161[#161]: NullPointerExceptions in tests validate Features Response_ Number Returned and validate Features With Bounding Box Response_ Number Matched
+- https://github.com/opengeospatial/ets-ogcapi-features10/issues/164[#164]: Construction of feature path for implementations results in invalid URLs
+- https://github.com/opengeospatial/ets-ogcapi-features10/issues/162[#162]: Test validate Features With Bounding Box Response_ Features Property fails unexpectedly
+- https://github.com/opengeospatial/ets-ogcapi-features10/issues/171[#171]: Compare and update ETS with latest ATS
+
 == 1.2 (2021-05-28)
 
 - https://github.com/opengeospatial/ets-ogcapi-features10/issues/133[#133]: Wrong construction of feature path for implementations using file extensions
