--- a/src/site/asciidoc/changelog.adoc
+++ b/src/site/asciidoc/changelog.adoc
@@ -1,5 +1,9 @@
 = Release Notes OGC API - Features
 
+== 1.4 (2022-05-31)
+
+- https://github.com/opengeospatial/ets-ogcapi-features10/pull/189[#189]: Update dependency rest-assured to v4.5.1
+
 == 1.3 (2021-07-30)
 
 - https://github.com/opengeospatial/ets-ogcapi-features10/issues/127[#127]: Add support for OGC API - Features - Part 2: Coordinate Reference Systems by Reference
