--- a/src/site/asciidoc/changelog.adoc
+++ b/src/site/asciidoc/changelog.adoc
@@ -1,5 +1,10 @@
 = Release Notes OGC API - Features
 
+== 1.6 (2023-08-31)
+
+- https://github.com/opengeospatial/ets-ogcapi-features10/issues/221[#221]: 1.3/CRS84h required but link is not working
+- https://github.com/opengeospatial/ets-ogcapi-features10/issues/222[#222]: Incorrect processing of point coordinates
+
 == 1.5 (2023-07-28)
 
 - https://github.com/opengeospatial/ets-ogcapi-features10/issues/184[#184]: Part 2: CRS should fail if it key tests were skipped
